<resources>
    <string name="app_name">Infogram</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="button_text">LOGIN</string>
    <string name="no_tienes_una_cuenta">No tienes una cuenta?,</string>
    <string name="crea_una_aqui">crea una aqui</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="usuario">Usuario</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="ji_hoon">Ji-hoon</string>
    <string name="clasifica_cardview">clasifica</string>
    <string name="hace_cardview">hace</string>
    <string name="dias_viewcard">dias</string>
    <string name="buscar_item">Buscar</string>
    <string name="home_item">Home</string>
    <string name="yo_item">YO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>